fix: slider alignment

--- a/src/common/scss/form-input.scss
+++ b/src/common/scss/form-input.scss
@@ -16,6 +16,7 @@
 
   &.sr-only {
     @include visibility.sr-only;
+    margin-bottom: 0;
   }
 
   [disabled] & {
