--- a/src/components/reusable/sliderInput/sliderInput.scss
+++ b/src/components/reusable/sliderInput/sliderInput.scss
@@ -16,6 +16,8 @@
 .slider-container {
   display: flex;
   position: relative;
+  // Allow external control of slider track vertical alignment via CSS custom property
+  transform: translateY(var(--kyn-slider-track-offset-y, 0px));
 }
 
 .slider-wrapper {
@@ -98,7 +100,7 @@ input[type='range'] {
   --track-height: 4px;
   --track-color: var(--kd-color-border-level-secondary);
   --clip-edges: 0.125em;
-  height: calc(var(--thumb-height) + 12px);
+  height: calc(var(--thumb-height) + 8px);
 }
 
 input[type='range'],
@@ -272,7 +274,7 @@ input[type='number'] {
 
 .tick-wrapper {
   position: absolute;
-  top: 18px;
+  top: 16px;
   left: 0;
   width: 100%;
   pointer-events: none;
